@@ -19,3 +19,5 @@ FRAMEWORK:
   - elasticsearch-2
   - elasticsearch-5
   - elasticsearch-6
+  - cassandra-newest
+
