@@ -1,0 +1,2 @@
+cassandra-driver>=3.4.0,<3.5.0
+-r requirements-base.txt
