@@ -1,0 +1,2 @@
+cassandra-driver>=3.14.0
+-r requirements-base.txt
