@@ -21,6 +21,12 @@ else
     fi
 fi
 
+export PATH=${HOME}/.local/bin:${PATH}
+python -m pip install --user -U pip --cache-dir "${PIP_CACHE}"
+python -m pip install --user -r "tests/requirements/requirements-${WEBFRAMEWORK}.txt" --cache-dir "${PIP_CACHE}"
+
+export PYTHON_VERSION=$(python -c "import platform; pv=platform.python_version_tuple(); print('pypy' + ('' if pv[0] == 2 else str(pv[0])) if platform.python_implementation() == 'PyPy' else '.'.join(map(str, platform.python_version_tuple()[:2])))")
+
 make update-json-schema
 
 if [[ -n $WAIT_FOR_HOST ]]
