@@ -13,6 +13,7 @@
 https://github.com/elastic/apm-agent-python/compare/v2.1.1\...master[Check the HEAD diff]
 
  * introduced consistent logger name scheme for all elasticapm internal log messages ({pull}212[#212])
+ * added instrumentation of cassandra-driver ({pull}205[#205])
  * added instrumentation of elasticsearch-py ({pull}191[#191])
  * added Flask 1.0 to the test matrix ({pull}207[#207])
  * fixed an issue with our minimalistic SQL parser and "fully qualified" table names ({pull}206[#206])
